--- a/front/package.json
+++ b/front/package.json
@@ -10,10 +10,13 @@
     "formik": "^2.2.6",
     "react": "^17.0.2",
     "react-bootstrap": "^1.5.2",
+    "react-date-picker": "^8.1.1",
     "react-dom": "^17.0.2",
+    "react-dropdown-tree-select": "^2.5.1",
     "react-images-uploading": "^3.1.2",
     "react-markdown": "^6.0.1",
     "react-scripts": "4.0.3",
+    "react-search-panel": "^1.0.8",
     "react-styled-components": "^0.1.11",
     "react-youtube": "^7.13.1",
     "styled-components": "^5.2.3",
