--- a/front/package.json
+++ b/front/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^12.8.3",
     "bootstrap": "^4.6.0",
     "formik": "^2.2.6",
+    "path-to-regexp": "^6.2.0",
     "react": "^17.0.2",
     "react-bootstrap": "^1.5.2",
     "react-date-picker": "^8.1.1",
