--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.6.6",
     "mongoose": "^5.11.4",
-    "nodemon": "^2.0.6"
+    "nodemon": "^2.0.6",
+    "path-to-regexp": "^6.2.0"
   }
 }
